Add CLAUDE.md and CSP to manifest
Add a new CLAUDE.md guidance file for Claude Code that documents the project overview, build commands, architecture (app/extension structure), coding style, and commit/PR guidelines. Also update Shared (Extension)/Resources/manifest.json to include a content_security_policy for extension_pages that tightens allowed sources (script-src 'self'; object-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; base-uri 'none'; frame-ancestors 'none'). No permissions were added or other behavior changed.

--- a/Shared (Extension)/Resources/manifest.json
+++ b/Shared (Extension)/Resources/manifest.json
@@ -29,5 +29,9 @@
         "default_icon": "images/toolbar-icon.svg"
     },
 
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self'; img-src 'self' data:; connect-src 'self'; base-uri 'none'; frame-ancestors 'none'"
+    },
+
     "permissions": [ ]
 }
